2008-11-26  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Match vim's post-yank caret positioning.

2008-11-26  Grzegorz Sobański  <silk@boktor.net>

	* Mono.TextEditor.Vi/ViActionMaps.cs: handle Insert key in insert 
	  and replace mode.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/ChunkStyle.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Worked on markup
	syntax mode.

2008-11-26  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/GutterMargin.cs: taken out line change command handler
	in gutter margin.

2008-11-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextMarker.cs: Fix end location of underline marker.

2008-11-25  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement sS.

2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 448006 -
	MD crashes while editing XML files'.

2008-11-24  Mike Krüger  <mkrueger@novell.com>

	* SyntaxModes/CSharpSyntaxMode.xml:
	* Mono.TextEditor.Highlighting/Span.cs:
	* Mono.TextEditor.Highlighting/SyntaxMode.cs:
	* Mono.TextEditor.Highlighting/SyntaxModeService.cs: fixed 'Bug 447547 -
	Error occurred when highlighting multiline strings(@"")'.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextViewMargin.cs: fixed off by 1 error.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Worked on markup
	syntax mode.

2008-11-21  Mike Krüger  <mkrueger@novell.com>

	* Mono.TextEditor/TextMarker.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor.Highlighting/MarkupSyntaxMode.cs: Added support for
	underlining highlighting styles.

2008-11-20  Michael Hutchinson  <mhutchinson@novell.com>
