@@ -1,3 +1,7 @@
+2008-12-02  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
+
+	* Mono.TextEditor.Vi/ViMode.cs: Match vim's post-replace caret positioning.
+
 2008-11-26  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>
 
 	* Mono.TextEditor.Vi/ViMode.cs: Match vim's post-yank caret positioning.
